--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
 name = "baseline"
 description = "Common types and traits for dealing with financial data"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 license = "LGPL-3.0-only"
 readme = "README.md"
 repository = "https://github.com/fourbytes/baseline/"
+keywords = ["finance", "data", "cryptocurrency"]
+categories = ["data-structures"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
